<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_city"
        android:orderInCategory="110"
        android:title="@string/action_app_city"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fqa"
        android:orderInCategory="120"
        android:title="@string/action_FAQ"
        app:showAsAction="never"/>
</menu>